# FastMask

./: CMakeLists.txt  package.xml
launch/: run_fastmask_segmentation_remote_machine.launch
msg/: FastMaskBB2D.msg  FastMaskBB2DArray.msg
scripts/: fastmask_segmentation.py  fastmask_segmentation_client.py  fastmask_segmentation_server.py  image_demo.py  test_caffe.py
srv/: FastMaskSegmentation.srv
